Start introduction, create poster layout

--- a/main.tex
+++ b/main.tex
@@ -9,45 +9,28 @@
 \usepackage[cmintegrals]{newtxmath}
 \hyphenation{op-tical net-works semi-conduc-tor}
 \begin{document}
-\title{Bare Demo of IEEEtran.cls for\\ IEEE Communications Society Journals}
-\author{Michael~Shell,~\IEEEmembership{Member,~IEEE,}
-        John~Doe,~\IEEEmembership{Fellow,~OSA,}
-        and~Jane~Doe,~\IEEEmembership{Life~Fellow,~IEEE}% <-this % stops a space
-\thanks{M. Shell was with the Department
-of Electrical and Computer Engineering, Georgia Institute of Technology, Atlanta,
-GA, 30332 USA e-mail: (see http://www.michaelshell.org/contact.html).}% <-this % stops a space
-\thanks{J. Doe and J. Doe are with Anonymous University.}% <-this % stops a space
-\thanks{Manuscript received April 19, 2005; revised August 26, 2015.}}
-
-\markboth{Journal of \LaTeX\ Class Files,~Vol.~14, No.~8, August~2015}%
-{Shell \MakeLowercase{\textit{et al.}}: Bare Demo of IEEEtran.cls for IEEE Communications Society Journals}
+\title{Ransomware: Is human error the primary reason for the surge in this increasingly popular malware?}
+\author{Craig Heptinstall Crh13- 110005643\\Institute of Computer Science - Aberystywth University}
 \maketitle
 
 \begin{abstract}
-The abstract goes here.
+As computers and other machines become more and more an integral part of a person's life, the risk of a computer infection increases. The amount of platforms available to the common user today allows malicious attackers a variety of ways to access user's personal data (from contact details to banking details.) A class of malware that has been reported more than others in recent years known as ransomware has been taking advantage of user's fears and errors. Because most ransomware requires users to physically click a link or download a file to instigate this malware, human error can be perceived to one of the biggest causes of the rise of attacks. 
 \end{abstract}
 
 \begin{IEEEkeywords}
-Communications Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
+Computer Crime, Computing, Human Error, Malicious, Malware, Ransomware, Users, Virus
 \end{IEEEkeywords}
 
 \IEEEpeerreviewmaketitle
 
 \section{Introduction}
-\IEEEPARstart{T}{his} demo file is intended to serve as a ``starter file''
-for IEEE Communications Society journal papers produced under \LaTeX\ using
-IEEEtran.cls version 1.8b and later.
-I wish you the best of success.
+\IEEEPARstart{I}{n} the past few years, the amount of news reports on cases of this form of malware has been increasing, showing both the rise of cases, and the sophistication of attacks. The most recent of these includes an article from the BBC \cite{bbc-ransomware}, where a ransomware software known as Maktub emails a user not only a malicious link to the software, but the user's postcode to make it more convincing. With more and more intricate ways of persuading the users to access the malware, it is the up-most importance that user's should know when a link, email or web address is genuine. This paper looks into the opinion that reducing human error could reduce the number of infected machines, and in particular the number of cases of ransomware.
 
-\hfill mds
- 
-\hfill August 26, 2015
+\subsection{Ransomware}
+In order to look closely at some of the human errors that are causing the rise of ransomware, the malicious software should be examined, and reasons why this form of software is so effective in current times. \\
+In a paper by A. Kharraz (A look under the hoof of ransomware attacks) \cite{under-the-hood}, the authors give an insight into how attacks take place, and how a range of different encryption algorithms are used by several of the most common ransomware. Ransomware belongs to a class of malware identified by the author as "scareware", which takes advantage of a users' fear of losing their private information 
 
-\subsection{Subsection Heading Here}
-Subsection text here.
-
-\subsubsection{Subsubsection Heading Here}
-Subsubsection text here.
+\subsection{Human errors- the consequences}
 
 \section{Conclusion}
 The conclusion goes here.
