Add more words, add poster

--- a/main.tex
+++ b/main.tex
@@ -27,8 +27,20 @@ Computer Crime, Computing, Human Error, Malicious, Malware, Ransomware, Users, V
 \IEEEPARstart{I}{n} the past few years, the amount of news reports on cases of this form of malware has been increasing, showing both the rise of cases, and the sophistication of attacks. The most recent of these includes an article from the BBC \cite{bbc-ransomware}, where a ransomware software known as Maktub emails a user not only a malicious link to the software, but the user's postcode to make it more convincing. With more and more intricate ways of persuading the users to access the malware, it is the up-most importance that user's should know when a link, email or web address is genuine. This paper looks into the opinion that reducing human error could reduce the number of infected machines, and in particular the number of cases of ransomware.
 
 \subsection{Ransomware}
-In order to look closely at some of the human errors that are causing the rise of ransomware, the malicious software should be examined, and reasons why this form of software is so effective in current times. \\
-In a paper by A. Kharraz (A look under the hoof of ransomware attacks) \cite{under-the-hood}, the authors give an insight into how attacks take place, and how a range of different encryption algorithms are used by several of the most common ransomware. Ransomware belongs to a class of malware identified by the author as "scareware", which takes advantage of a users' fear of losing their private information 
+In order to look closely aIn order to look closely at some of the human errors that are causing the rise of ransomware, the malicious software should be examined, and reasons why this form of software is so effective in current times. \par
+In a paper by A. Kharraz (A look under the hoof of ransomware attacks) \cite{4}, the authors give an insight into how attacks take place, and how a range of different encryption algorithms are used by several of the most common ransomwares. Ransomware belongs to a class of malware identified by the author as ‘scareware’, which takes advantage of a users’ fear of losing their private information or having their data exposed to others. \par
+In addition to the basic introduction of what the author introduces ransomware as, is the startling statistics on this kind of malware. In 2013, the author reported an increase of over 500\% on the amount of attacks compared to 2012. Because of this statistic, the author claims that ransomware is one of the most threatening viruses at the time the paper was published. In conducting research about the inner-workings of ransomware the author uses 1359 real-life reported cases of ransomware attacks in order to get consensus of how attacks are generally performed. \\
+They found most prominently:
+\begin{itemize}
+\item There are two main ransomware families (specific pieces of software which have developed over the years). Both with highlighted traits, these are:
+\begin{enumerate}
+\item TorrentLocker - A ransomware exlusivley distributed by email, and uses the infected user’s email address list to distribute further.
+\item CryptoWall - Communicates back to the attackers using the Tor network, to remain anonymous.
+\end{enumerate}
+\item There are a further 97 variants, most of which are related. Some are direct copies however.
+\item 35.6\% of the attcks were made by ransomware that do not perform encryption, but simply delete users files if they do not pay the ransom.
+\item CyrptoWall infected 250,000 computers worldwide in the year of publishing (2015).
+\end{itemize}
 
 \subsection{Human errors- the consequences}
 
@@ -36,8 +48,6 @@ In a paper by A. Kharraz (A look under the hoof of ransomware attacks) \cite{und
 The conclusion goes here.
 
 \appendices
-\section{Proof of the First Zonklar Equation}
-Appendix one text goes here.
 
 \section{}
 Appendix two text goes here.
